--- a/apps/flexbox-test/index.html
+++ b/apps/flexbox-test/index.html
@@ -24,6 +24,11 @@
                         <strong>Example 2</strong>
                     </a>
                 </li>
+                <li>
+                    <a href="./example3.html" class="example-link">
+                        <strong>Example 3</strong>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
