Feat: Grid-Test final push

--- a/apps/grid-test/index.html
+++ b/apps/grid-test/index.html
@@ -29,6 +29,11 @@
                         <strong>Example 3</strong>
                     </a>
                 </li>
+                <li>
+                    <a href="./example4.html" class="example-link">
+                        <strong>Example 4</strong>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
